--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Stepping into Quantumania with Azure Quantum"
+author: "Maalavika Srikantan, Vineeth Vignaraj, Anoushka Nag"
+description: "An introduction to Quantum Computing and its application in the field of Chemistry" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
